Exposed entry points as composer bins

--- a/composer.json
+++ b/composer.json
@@ -74,5 +74,9 @@
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "bin": [
+        "bin/shlink-install",
+        "bin/shlink-update"
+    ]
 }
