--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.2",
         "lstrojny/functional-php": "^1.9",
         "symfony/console": "^4.2",
         "symfony/filesystem": "^4.2",
@@ -23,11 +23,11 @@
     },
     "require-dev": {
         "devster/ubench": "^2.0",
-        "infection/infection": "^0.11.0",
-        "phpstan/phpstan": "^0.10.0",
-        "phpunit/phpunit": "^8.0 || ^7.3",
+        "infection/infection": "^0.13.4",
+        "phpstan/phpstan": "^0.11.12",
+        "phpunit/phpunit": "^8.0",
         "roave/security-advisories": "dev-master",
-        "shlinkio/php-coding-standard": "~1.1.0",
+        "shlinkio/php-coding-standard": "~1.2.2",
         "symfony/var-dumper": "^4.2"
     },
     "autoload": {
