--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shlinkio/shlink-installer",
-    "type": "project",
+    "type": "library",
     "homepage": "https://shlink.io",
     "description": "A PHP command line tool used to install shlink",
     "license": "MIT",
@@ -16,9 +16,9 @@
         "lstrojny/functional-php": "^1.9",
         "symfony/console": "^4.3",
         "symfony/filesystem": "^4.3",
-        "symfony/process": "^4.2",
+        "symfony/process": "^4.3",
         "zendframework/zend-config": "^3.2",
-        "zendframework/zend-servicemanager": "^3.2",
+        "zendframework/zend-servicemanager": "^3.4",
         "zendframework/zend-stdlib": "^3.2"
     },
     "require-dev": {
@@ -28,7 +28,7 @@
         "phpunit/phpunit": "^8.0",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~1.2.2",
-        "symfony/var-dumper": "^4.2"
+        "symfony/var-dumper": "^4.3"
     },
     "autoload": {
         "psr-4": {
@@ -52,9 +52,9 @@
         "cs:fix": "phpcbf",
         "stan": "phpstan analyse src --level=6 -c phpstan.neon",
 
-        "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox",
-        "test:ci": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/phpunit.junit.xml --testdox",
-        "test:pretty": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-html build/coverage-html --testdox",
+        "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox --colors=always",
+        "test:ci": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/phpunit.junit.xml --testdox --colors=always",
+        "test:pretty": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-html build/coverage-html --testdox --colors=always",
 
         "infect": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered",
         "infect:ci": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered --coverage=build",
