--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,21 @@
     "require": {
         "php": "^7.2",
         "lstrojny/functional-php": "^1.9",
-        "symfony/console": "^4.3",
-        "symfony/filesystem": "^4.3",
-        "symfony/process": "^4.3",
+        "symfony/console": "^5.0",
+        "symfony/filesystem": "^5.0",
+        "symfony/process": "^5.0",
         "zendframework/zend-config": "^3.2",
         "zendframework/zend-servicemanager": "^3.4",
         "zendframework/zend-stdlib": "^3.2"
     },
     "require-dev": {
         "devster/ubench": "^2.0",
-        "infection/infection": "^0.14.1",
-        "phpstan/phpstan": "^0.11.12",
+        "infection/infection": "^0.15.0",
+        "phpstan/phpstan-shim": "^0.11.12",
         "phpunit/phpunit": "^8.0",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.0.0",
-        "symfony/var-dumper": "^4.3"
+        "symfony/var-dumper": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -53,7 +53,7 @@
         "stan": "phpstan analyse src --level=6 -c phpstan.neon",
 
         "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox --colors=always",
-        "test:ci": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/phpunit.junit.xml --testdox --colors=always",
+        "test:ci": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml --testdox --colors=always",
         "test:pretty": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-html build/coverage-html --testdox --colors=always",
 
         "infect": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered",
