--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require-dev": {
         "devster/ubench": "^2.0",
         "infection/infection": "^0.15.0",
-        "phpstan/phpstan-shim": "^0.11.12",
+        "phpstan/phpstan": "^0.12.0",
         "phpunit/phpunit": "^8.0",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.0.0",
@@ -50,16 +50,16 @@
 
         "cs": "phpcs",
         "cs:fix": "phpcbf",
-        "stan": "phpstan analyse src --level=6 -c phpstan.neon",
+        "stan": "phpstan analyse src --level=5 -c phpstan.neon",
 
         "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox --colors=always",
-        "test:ci": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml --testdox --colors=always",
-        "test:pretty": "phpdbg -qrr vendor/bin/phpunit --order-by=random --coverage-html build/coverage-html --testdox --colors=always",
+        "test:ci": "@test --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml",
+        "test:pretty": "@test --coverage-html build/coverage-html",
 
         "infect": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered",
-        "infect:ci": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered --coverage=build",
-        "infect:show": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered --show-mutations",
-        "infect:show:ci": "infection --threads=4 --min-msi=70 --log-verbosity=default --only-covered --show-mutations --coverage=build",
+        "infect:ci": "@infect --coverage=build",
+        "infect:show": "@infect --show-mutations",
+        "infect:show:ci": "@infect --show-mutations --coverage=build",
 
         "test:infect": [
             "@test:ci",
