--- a/config/config.local.php.dist
+++ b/config/config.local.php.dist
@@ -4,19 +4,20 @@ declare(strict_types=1);
 
 return [
 
-    'installation_commands' => [
-        'db_create_schema' => [
-//            'command' => 'bin/shlink-installer shlink:db:create',
-            'command' => '-v', // Just print PHP version
-        ],
-        'db_migrate' => [
-            'command' => '-v', // Just print PHP version
-        ],
-        'orm_proxies' => [
-            'command' => '-v', // Just print PHP version
-        ],
-        'geolite_download' => [
-            'command' => '-v', // Just print PHP version
+    'installer' => [
+        'installation_commands' => [
+            'db_create_schema' => [
+                'command' => '-v', // Just print PHP version
+            ],
+            'db_migrate' => [
+                'command' => '-v', // Just print PHP version
+            ],
+            'orm_proxies' => [
+                'command' => '-v', // Just print PHP version
+            ],
+            'geolite_download' => [
+                'command' => '-v', // Just print PHP version
+            ],
         ],
     ],
 
