--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
     "require": {
         "php": "^7.4",
         "lstrojny/functional-php": "^1.9",
+        "laminas/laminas-config": "^3.2",
+        "laminas/laminas-dependency-plugin": "^1.0",
+        "laminas/laminas-servicemanager": "^3.4",
+        "laminas/laminas-stdlib": "^3.2",
         "symfony/console": "^5.0",
         "symfony/filesystem": "^5.0",
-        "symfony/process": "^5.0",
-        "zendframework/zend-config": "^3.2",
-        "zendframework/zend-servicemanager": "^3.4",
-        "zendframework/zend-stdlib": "^3.2"
+        "symfony/process": "^5.0"
     },
     "require-dev": {
         "devster/ubench": "^2.0",
@@ -47,20 +48,16 @@
             "@test:ci",
             "@infect:ci"
         ],
-
         "cs": "phpcs",
         "cs:fix": "phpcbf",
         "stan": "phpstan analyse src --level=6",
-
         "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox --colors=always",
         "test:ci": "@test --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml",
         "test:pretty": "@test --coverage-html build/coverage-html",
-
         "infect": "infection --threads=4 --min-msi=80 --log-verbosity=default --only-covered",
         "infect:ci": "@infect --coverage=build",
         "infect:show": "@infect --show-mutations",
         "infect:show:ci": "@infect --show-mutations --coverage=build",
-
         "test:infect": [
             "@test:ci",
             "@infect:show:ci"
