--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,4 @@ infection.json export-ignore
 phpcs.xml export-ignore
 phpstan.neon export-ignore
 phpunit.xml.dist export-ignore
+shlink-installer.gif export-ignore
