--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
     ],
     "require": {
         "php": "^7.4",
-        "lstrojny/functional-php": "^1.9",
         "laminas/laminas-config": "^3.2",
         "laminas/laminas-dependency-plugin": "^1.0",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.2",
+        "lstrojny/functional-php": "^1.9",
+        "shlinkio/shlink-config": "^1.0",
         "symfony/console": "^5.0",
         "symfony/filesystem": "^5.0",
         "symfony/process": "^5.0"
