--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,10 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./src</directory>
+
+            <exclude>
+                <file>./src/Util/PathCollection.php</file>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
