--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7.4",
         "laminas/laminas-config": "^3.2",
+        "laminas/laminas-config-aggregator": "^1.2",
         "laminas/laminas-dependency-plugin": "^1.0",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.2",
