--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     },
     "require-dev": {
         "devster/ubench": "^2.0",
-        "infection/infection": "^0.15.0",
-        "phpstan/phpstan": "^0.12.0",
-        "phpunit/phpunit": "^8.0",
+        "infection/infection": "^0.16.1",
+        "phpstan/phpstan": "^0.12.18",
+        "phpunit/phpunit": "~9.0.2",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.1.0",
         "symfony/var-dumper": "^5.0"
@@ -52,12 +52,12 @@
         ],
         "cs": "phpcs",
         "cs:fix": "phpcbf",
-        "stan": "phpstan analyse src --level=6",
+        "stan": "phpstan analyse src --level=7",
         "test": "phpdbg -qrr vendor/bin/phpunit --order-by=random --testdox --colors=always",
         "test:ci": "@test --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml",
         "test:pretty": "@test --coverage-html build/coverage-html",
         "infect": "infection --threads=4 --min-msi=80 --log-verbosity=default --only-covered",
-        "infect:ci": "@infect --coverage=build",
+        "infect:ci": "@infect --coverage=build --skip-initial-tests",
         "infect:show": "@infect --show-mutations",
         "infect:show:ci": "@infect --show-mutations --coverage=build",
         "test:infect": [
