Updated to phpunit 9.1 and added phpspec/prophecy-phpunit

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
     "require-dev": {
         "devster/ubench": "^2.0",
         "infection/infection": "^0.16.1",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^0.12.18",
-        "phpunit/phpunit": "~9.0.2",
+        "phpunit/phpunit": "^9.1",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.1.0",
         "symfony/var-dumper": "^5.0"
