--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ config/config.local.php.dist export-ignore
 config/params export-ignore
 test export-ignore
 test-resources export-ignore
+.github export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .phpstorm.meta.php export-ignore
