--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "laminas/laminas-config": "^3.2",
         "laminas/laminas-config-aggregator": "^1.2",
         "laminas/laminas-servicemanager": "^3.4",
