--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,9 @@ cache:
 
 jobs:
   fast_finish: true
-  allow_failures:
-    - php: '8.0'
   include:
     - name: "CI - 8.0"
-      php: '8.0'
+      php: '8.0snapshot'
       env:
         - COMPOSER_FLAGS='--ignore-platform-reqs'
     - name: "CI - 7.4"
