--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ jobs:
   fast_finish: true
   include:
     - name: "CI - 8.0"
-      php: '8.0snapshot'
+      php: '8.0'
       env:
-        - COMPOSER_FLAGS='--ignore-platform-reqs'
+        - COMPOSER_FLAGS='--ignore-platform-req=php'
     - name: "CI - 7.4"
       php: '7.4'
       env:
