Separated Install and Updated commands, allowing more commands to be added and exposing new tool entry point

--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
     },
     "bin": [
         "bin/shlink-install",
-        "bin/shlink-update"
+        "bin/shlink-update",
+        "bin/shlink-installer"
     ]
 }
