--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4']
+        php-version: ['8.0']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4']
+        php-version: ['8.0']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -46,7 +46,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4', '8.0']
+        php-version: ['8.0', '8.1']
+    continue-on-error: ${{ matrix.php-version == '8.1' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -56,9 +57,9 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: composer
           coverage: none
-      - if: ${{ matrix.php-version == '8.0' }}
+      - if: ${{ matrix.php-version == '8.1' }}
         run: composer install --no-interaction --prefer-dist --ignore-platform-req=php
-      - if: ${{ matrix.php-version != '8.0' }}
+      - if: ${{ matrix.php-version != '8.1' }}
         run: composer install --no-interaction --prefer-dist
       - run: composer test:ci
       - uses: actions/upload-artifact@v2
@@ -72,7 +73,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4', '8.0']
+        php-version: ['8.0', '8.1']
+    continue-on-error: ${{ matrix.php-version == '8.1' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -82,9 +84,9 @@ jobs:
           php-version: ${{ matrix.php-version }}
           tools: composer
           coverage: none
-      - if: ${{ matrix.php-version == '8.0' }}
+      - if: ${{ matrix.php-version == '8.1' }}
         run: composer install --no-interaction --prefer-dist --ignore-platform-req=php
-      - if: ${{ matrix.php-version != '8.0' }}
+      - if: ${{ matrix.php-version != '8.1' }}
         run: composer install --no-interaction --prefer-dist
       - uses: actions/download-artifact@v2
         with:
@@ -98,7 +100,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4']
+        php-version: ['8.0']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -123,7 +125,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        php-version: ['7.4', '8.0']
+        php-version: ['8.0', '8.1']
     steps:
       - uses: geekyeggo/delete-artifact@v1
         with:
