Added missing version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,4 @@ on:
 
 jobs:
   ci:
-    uses: shlinkio/github-actions/.github/workflows/php-lib-ci.yml
+    uses: shlinkio/github-actions/.github/workflows/php-lib-ci.yml@main
