--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ test-resources export-ignore
 CHANGELOG.md export-ignore
 docker-compose.override.yml.dist export-ignore
 docker-compose.yml export-ignore
+Dockerfile export-ignore
 indocker export-ignore
 infection.json export-ignore
 phpcs.xml export-ignore
