--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
     xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
     bootstrap="./vendor/autoload.php"
     colors="true"
-    cacheDirectory=".phpunit.cache"
+    cacheDirectory="build/.phpunit.cache"
 >
     <testsuites>
         <testsuite name="Installer">
