--- a/composer.json
+++ b/composer.json
@@ -16,21 +16,21 @@
         "laminas/laminas-config": "^3.9",
         "laminas/laminas-config-aggregator": "^1.14",
         "laminas/laminas-servicemanager": "^3.22",
-        "laminas/laminas-stdlib": "^3.18",
-        "shlinkio/shlink-config": "^2.4",
-        "symfony/console": "^6.3",
-        "symfony/filesystem": "^6.3",
-        "symfony/process": "^6.3"
+        "laminas/laminas-stdlib": "^3.19",
+        "shlinkio/shlink-config": "^2.5",
+        "symfony/console": "^7.0 || ^6.4",
+        "symfony/filesystem": "^7.0 || ^6.4",
+        "symfony/process": "^7.0 || ^6.4"
     },
     "require-dev": {
         "devster/ubench": "^2.1",
-        "infection/infection": "^0.27.7",
+        "infection/infection": "^0.27.9",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1.3",
-        "phpunit/phpunit": "^10.4",
+        "phpunit/phpunit": "^10.5",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.3.0",
-        "symfony/var-dumper": "^6.3"
+        "symfony/var-dumper": "^7.0 || ^6.4"
     },
     "autoload": {
         "psr-4": {
