--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
     },
     "require-dev": {
         "devster/ubench": "^2.1",
-        "infection/infection": "^0.27.9",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.5",
@@ -46,35 +45,23 @@
         "ci": [
             "@cs",
             "@stan",
-            "@test:ci",
-            "@infect:ci"
+            "@test:ci"
         ],
         "cs": "phpcs",
         "cs:fix": "phpcbf",
         "stan": "phpstan analyse src test test-resources config --level=8",
         "test": "phpunit --order-by=random --testdox --colors=always",
-        "test:ci": "@test --coverage-clover=build/clover.xml --coverage-xml=build/coverage-xml --log-junit=build/junit.xml",
-        "test:pretty": "@test --coverage-html build/coverage-html",
-        "infect": "infection --threads=4 --min-msi=90 --log-verbosity=default --only-covered",
-        "infect:ci": "@infect --coverage=build --skip-initial-tests",
-        "infect:show": "@infect --show-mutations",
-        "infect:show:ci": "@infect --show-mutations --coverage=build",
-        "infect:test": [
-            "@test:ci",
-            "@infect:show:ci"
-        ]
+        "test:ci": "@test --coverage-clover=build/clover.xml",
+        "test:pretty": "@test --coverage-html=build/coverage-html"
     },
     "scripts-descriptions": {
-        "ci": "<fg=blue;options=bold>Alias for \"cs\", \"stan\", \"test:ci\" and \"infect:ci\"</>",
+        "ci": "<fg=blue;options=bold>Alias for \"cs\", \"stan\" and \"test:ci\"</>",
         "cs": "<fg=blue;options=bold>Checks coding styles</>",
         "cs:fix": "<fg=blue;options=bold>Fixes coding styles, when possible</>",
         "stan": "<fg=blue;options=bold>Inspects code with phpstan</>",
         "test": "<fg=blue;options=bold>Runs unit tests with no coverage reports</>",
         "test:ci": "<fg=blue;options=bold>Runs unit tests generating coverage reports and logs</>",
-        "test:pretty": "<fg=blue;options=bold>Runs unit tests generating coverage reports in html</>",
-        "infect": "<fg=blue;options=bold>Checks unit tests quality applying mutation testing</>",
-        "infect:ci": "<fg=blue;options=bold>Checks unit tests quality applying mutation testing with existing reports and logs</>",
-        "infect:show": "<fg=blue;options=bold>Checks unit tests quality applying mutation testing and shows applied mutators</>"
+        "test:pretty": "<fg=blue;options=bold>Runs unit tests generating coverage reports in html</>"
     },
     "config": {
         "sort-packages": true,
