--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,5 +2,5 @@ includes:
 	- vendor/phpstan/phpstan-phpunit/extension.neon
 	- vendor/phpstan/phpstan-phpunit/rules.neon
 parameters:
-	checkMissingIterableValueType: false
-	checkGenericClassInNonGenericObjectType: false
+	ignoreErrors:
+		- identifier: missingType.iterableValue
