--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "php": "^8.2",
         "laminas/laminas-config": "^3.9",
         "laminas/laminas-config-aggregator": "^1.15",
-        "laminas/laminas-servicemanager": "^3.22",
+        "laminas/laminas-servicemanager": "^4.2 || ^3.22",
         "laminas/laminas-stdlib": "^3.19",
-        "shlinkio/shlink-config": "^3.0",
+        "shlinkio/shlink-config": "^3.1",
         "symfony/console": "^7.1",
         "symfony/filesystem": "^7.1",
         "symfony/process": "^7.1"
@@ -26,7 +26,7 @@
         "devster/ubench": "^2.1",
         "phpstan/phpstan": "^1.11",
         "phpstan/phpstan-phpunit": "^1.4",
-        "phpunit/phpunit": "^11.1",
+        "phpunit/phpunit": "^11.2",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.3.0",
         "symfony/var-dumper": "^7.1"
