--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,12 @@
 includes:
-	- vendor/phpstan/phpstan-phpunit/extension.neon
-	- vendor/phpstan/phpstan-phpunit/rules.neon
+    - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan-phpunit/rules.neon
 parameters:
-	ignoreErrors:
-		- identifier: missingType.iterableValue
+    level: 8
+    paths:
+        - config
+        - src
+        - test
+        - test-resources
+    ignoreErrors:
+        - identifier: missingType.iterableValue
