--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   shlink_installer_php:
     container_name: shlink_installer_php
+    user: 1000:1000
     build:
       context: .
     volumes:
