--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
     ],
     "require": {
         "php": "^8.2",
-        "laminas/laminas-config": "^3.9",
         "laminas/laminas-config-aggregator": "^1.15",
         "laminas/laminas-servicemanager": "^4.2 || ^3.22",
         "laminas/laminas-stdlib": "^3.19",
         "shlinkio/shlink-config": "^3.1",
         "symfony/console": "^7.1",
         "symfony/filesystem": "^7.1",
-        "symfony/process": "^7.1"
+        "symfony/process": "^7.1",
+        "webimpress/safe-writer": "^2.2"
     },
     "require-dev": {
         "devster/ubench": "^2.1",
