--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laminas/laminas-config-aggregator": "^1.17",
         "laminas/laminas-servicemanager": "^4.3 || ^3.23",
         "laminas/laminas-stdlib": "^3.20",
-        "shlinkio/shlink-config": "^4.0 || ^3.4",
+        "shlinkio/shlink-config": "^4.0",
         "symfony/console": "^7.2",
         "symfony/filesystem": "^7.2",
         "symfony/process": "^7.2",
@@ -24,9 +24,9 @@
     },
     "require-dev": {
         "devster/ubench": "^2.1",
-        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-phpunit": "^2.0",
-        "phpunit/phpunit": "^11.5",
+        "phpunit/phpunit": "^12.0",
         "roave/security-advisories": "dev-master",
         "shlinkio/php-coding-standard": "~2.4.0",
         "symfony/var-dumper": "^7.2"
